[gd_scene load_steps=4 format=3 uid="uid://cvjfcgqktlyc2"]

[ext_resource type="Script" path="res://scenes/main/graph_edit_switcher.gd" id="1_fvn0a"]
[ext_resource type="Texture2D" uid="uid://c7vdr4e0mxst6" path="res://ui/assets/icons/close_icon.png" id="2_k726l"]
[ext_resource type="PackedScene" uid="uid://qdgl8co6qy6" path="res://common/layouts/graph_edit/monologue_graph_edit.tscn" id="3_o6be6"]



[node name="GraphEditSwitcher" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_fvn0a")

[node name="TabBar" type="TabBar" parent="."]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
theme_override_icons/close = ExtResource("2_k726l")
clip_tabs = false
tab_close_display_policy = 1
tab_count = 1
tab_0/title = "+"

[node name="GraphEdits" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Default" parent="GraphEdits" instance=ExtResource("3_o6be6")]
layout_mode = 1

[connection signal="tab_changed" from="TabBar" to="." method="_on_tab_changed"]
[connection signal="tab_close_pressed" from="TabBar" to="." method="on_tab_close_pressed"]
